[#393] original coverage metadata editing mode form update

--- a/hs_app_netCDF/templates/pages/netcdfresource.html
+++ b/hs_app_netCDF/templates/pages/netcdfresource.html
@@ -24,14 +24,14 @@
 
                         {% if original_coverage.projection_string_type %}
                             <div class="row">
-                                <div class="col-sm-4"><strong>Coordinate System Representation Type:</strong></div>
+                                <div class="col-sm-4"><strong>Coordinate Reference System Representation Type:</strong></div>
                                 <div class="col-sm-8">{{ original_coverage.projection_string_type}}</div>
                             </div>
                         {%  endif %}
 
                         {% if original_coverage.projection_string_text %}
                             <div class="row">
-                                <div class="col-sm-4"><strong>Coordinate System Representation Text:</strong></div>
+                                <div class="col-sm-4"><strong>Coordinate Reference System Representation Text:</strong></div>
                                 <div class="col-sm-8">{{ original_coverage.projection_string_text}}</div>
                             </div>
                         {%  endif %}
