--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -686,7 +686,7 @@
                     {% for b in cm.bags.all %}
                         <a id="btn-download-all" type="button" class="btn btn-default" href="{{ cm.bags.first.bag_url }}">
                             <span class="glyphicon glyphicon-download-alt">
-                                <span class="button-label">Download All ({{ b.bag.size|filesizeformat }})</span>
+                                <span class="button-label">Download All</span>
                             </span>
                         </a>
                     {% endfor %}
