[#293] implemented code review suggestions

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -1569,7 +1569,9 @@
                                         <div class="controls"><input
                                                 class="form-control input-sm urlinput"
                                                 id="id_contributor-{{ contributor.order|add:"- 1" }}-description" maxlength="200"
-                                                name="contributor-{{ contributor.order|add:"- 1" }}-description" type="url" value="{% if contributor.description %}{{ contributor.description }}{% endif %}"></div>
+                                                name="contributor-{{ contributor.order|add:"- 1" }}-description" type="url"
+                                                value="{% if contributor.description %}{{ contributor.description }}{% endif %}"
+                                                {% if contributor.description %} readonly {% endif %}></div>
                                     </div>
                                     <div id="div_id_organization" class="control-group">
                                         <label class="control-label">Organization</label>
