--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -140,7 +140,7 @@
 
                 // Find existing search and populate the search field
                 $input.val("");
-                $.each(["type", "author", "contributor", "owner"], function(){
+                $.each(["type", "author", "contributor", "owner", "subject"], function(){
                     if (urlParams[this]) {
                         for (var i=0; i < urlParams[this].length; i++) {
                             self.addItem(this, urlParams[this][i], urlParams[this][i]);
