[#165] remove reference to {{ b.bag.size|filesizeformat }} - no longer valid

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -690,7 +690,7 @@
                     {% for b in cm.bags.all %}
                         <a id="btn-download-all" type="button" class="btn btn-default" href="{{ bag_url }}">
                             <span class="glyphicon glyphicon-download-alt">
-                                <span title='Download All Content as Zipped BagIt Archive ({{ b.bag.size|filesizeformat }})' class="button-label">Download All Content as Zipped BagIt Archive ({{ b.bag.size|filesizeformat }})</span>
+                                <span title='Download All Content as Zipped BagIt Archive' class="button-label">Download All Content as Zipped BagIt Archive</span>
                             </span>
                         </a>
                     {% endfor %}
