[#436] update naming/order of resources

--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -49,14 +49,14 @@
             <select class="form-control" name="resource-type" id="resource-type">
                 <option value="GenericResource">Generic</option>
                 <option value="RasterResource">Geographic Raster</option>
-                <option value="TimeSeriesResource">Time Series</option>
-{#                <option value="InstResource">RHESSys Instance Resource</option> #}
                 <option value="RefTimeSeries">HIS Referenced Time Series</option>
-                <option value="ModelInstanceResource">Model Instance Resource</option>
-                <option value="SWATModelInstanceResource">SWAT Model Instance Resource</option>
+                <option value="ModelProgramResource">Model Program</option>
+                <option value="ModelInstanceResource">Model Instance</option>
+                <option value="SWATModelInstanceResource">SWAT Model Instance</option>
                 <option value="NetcdfResource">Multidimensional (NetCDF)</option>
-                <option value="ModelProgramResource">Model Program Resource</option>
+                <option value="TimeSeriesResource">Time Series</option>
                 <option value="ToolResource">Tool Resource</option>
+{#                <option value="InstResource">RHESSys Instance Resource</option> #}
             </select>
         </div>
     </div>
