Removed the hardcoded js path in modelinstance.  Fixed the get model_metatdata call that was causing an error. [#440]

--- a/hs_modelinstance/templates/pages/modelinstanceresource.html
+++ b/hs_modelinstance/templates/pages/modelinstanceresource.html
@@ -67,5 +67,5 @@
 
 {% block extra_js %}
     {{ block.super }}
-    <script src="../../static/js/model_instance.js"></script>
+    <script src="{% static "js/model_instance.js"%}"></script>
 {% endblock %}
