fixed misspelled word on model program landing page [#444]

--- a/hs_model_program/templates/pages/modelprogramresource.html
+++ b/hs_model_program/templates/pages/modelprogramresource.html
@@ -18,7 +18,7 @@
                             <div class="col-sm-8">{{ mpmetadata.software_version }}</div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-4"><strong>Sofware Languages:</strong></div>
+                            <div class="col-sm-4"><strong>Software Languages:</strong></div>
                             <div class="col-sm-8">{{ mpmetadata.software_language }}</div>
                         </div>
                         <div class="row">
