--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1731,7 +1731,7 @@ span.name-label{
 }
 
 .resource-search input {
-    padding: 0px 5px;
+    padding: 0 5px;
 	width: 100%;
 	position: absolute;
 	height: 100%;
