--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -50,9 +50,9 @@
                 <option value="GenericResource">Generic</option>
                 <option value="RasterResource">Geographic Raster</option>
                 <option value="RefTimeSeries">HIS Referenced Time Series</option>
-                <option value="ModelProgramResource">Model Program</option>
                 <option value="ModelInstanceResource">Model Instance</option>
-                <option value="SWATModelInstanceResource">SWAT Model Instance</option>
+                <option value="ModelProgramResource">Model Program</option>
+{#                <option value="SWATModelInstanceResource">SWAT Model Instance</option>#}
                 <option value="NetcdfResource">Multidimensional (NetCDF)</option>
                 <option value="TimeSeriesResource">Time Series</option>
                 <option value="ToolResource">Tool Resource</option>
