NFIE - rename Tool Resource to Application

--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -55,7 +55,7 @@
 {#                <option value="SWATModelInstanceResource">SWAT Model Instance</option>#}
                 <option value="NetcdfResource">Multidimensional (NetCDF)</option>
                 <option value="TimeSeriesResource">Time Series</option>
-                <option value="ToolResource">Tool Resource</option>
+                <option value="ToolResource">Application</option>
 {#                <option value="InstResource">RHESSys Instance Resource</option> #}
             </select>
         </div>
