extend from base.html instead of accounts/account_form.html

--- a/theme/templates/accounts/account_login.html
+++ b/theme/templates/accounts/account_login.html
@@ -1,6 +1,8 @@
-{% extends "accounts/account_form.html" %}
+{% extends "base.html" %}
 {% load i18n future %}
 {% block title %}Sign In{% endblock %}
+
+{% block main_cols %}col-md-6 col-md-offset-3{% endblock %}
 
 {% block main %}
 
