--- a/theme/templates/accounts/account_password_reset.html
+++ b/theme/templates/accounts/account_password_reset.html
@@ -1,5 +1,7 @@
-{% extends "accounts/account_form.html" %}
+{% extends "base.html" %}
 {% load i18n %}
+
+{% block main_cols %}col-md-6 col-md-offset-3{% endblock %}
 
 {% block main %}
 {{ block.super }}
