--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -52,7 +52,7 @@
                 <option value="RefTimeSeries">HIS Referenced Time Series</option>
                 <option value="ModelProgramResource">Model Program</option>
                 <option value="ModelInstanceResource">Model Instance</option>
-{#                <option value="SWATModelInstanceResource">SWAT Model Instance</option>#}
+                <option value="SWATModelInstanceResource">SWAT Model Instance</option>
                 <option value="NetcdfResource">Multidimensional (NetCDF)</option>
                 <option value="TimeSeriesResource">Time Series</option>
                 <option value="ToolResource">Application</option>
