--- a/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
+++ b/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
@@ -143,9 +143,17 @@
                         <h4><strong>Model Input:</strong></h4>
                         <hr style="margin-top: 0px;margin-bottom: 2px">
                         <div class="row">
+                            {% if model_input.warm_up_period %}
+                                <div class="col-sm-4"><strong>Warm-up period in years:</strong></div>
+                                <div class="col-sm-8">{{ model_input.warm_up_period }}</div>
+                            {% endif %}
                             {% if model_input.rainfall_time_step %}
                                 <div class="col-sm-4"><strong>Rainfall time step:</strong></div>
                                 <div class="col-sm-8">{{ model_input.rainfall_time_step }}</div>
+                            {% endif %}
+                            {% if model_input.routing_time_step %}
+                                <div class="col-sm-4"><strong>Routing time step:</strong></div>
+                                <div class="col-sm-8">{{ model_input.routing_time_step }}</div>
                             {% endif %}
                             {% if model_input.simulation_time_step %}
                                 <div class="col-sm-4"><strong>Simulation time step:</strong></div>
