--- a/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
+++ b/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
@@ -88,48 +88,8 @@
                         <h4><strong>SWAT model used parameters:</strong></h4>
                         <hr style="margin-top: 0px;margin-bottom: 2px">
                         <div class="row">
-                            <div class="col-sm-4"><strong>Has crop rotation?</strong></div>
-                            {% if swat_model_parameters.has_crop_rotation %}
-                                <div class="col-sm-8">Yes</div>
-                            {% else %}
-                                <div class="col-sm-8">No</div>
-                            {% endif %}
-                            <div class="col-sm-4"><strong>Has title drainage?</strong></div>
-                            {% if swat_model_parameters.has_title_drainage %}
-                                <div class="col-sm-8">Yes</div>
-                            {% else %}
-                                <div class="col-sm-8">No</div>
-                            {% endif %}
-                            <div class="col-sm-4"><strong>Has point resource?</strong></div>
-                            {% if swat_model_parameters.has_point_source %}
-                                <div class="col-sm-8">Yes</div>
-                            {% else %}
-                                <div class="col-sm-8">No</div>
-                            {% endif %}
-                            <div class="col-sm-4"><strong>Has fertilizer?</strong></div>
-                            {% if swat_model_parameters.has_fertilizer %}
-                                <div class="col-sm-8">Yes</div>
-                            {% else %}
-                                <div class="col-sm-8">No</div>
-                            {% endif %}
-                            <div class="col-sm-4"><strong>Has tillage operation?</strong></div>
-                            {% if swat_model_parameters.has_tillage_operation %}
-                                <div class="col-sm-8">Yes</div>
-                            {% else %}
-                                <div class="col-sm-8">No</div>
-                            {% endif %}
-                            <div class="col-sm-4"><strong>Has inlet of draining watershed?</strong></div>
-                            {% if swat_model_parameters.has_inlet_of_draining_watershed %}
-                                <div class="col-sm-8">Yes</div>
-                            {% else %}
-                                <div class="col-sm-8">No</div>
-                            {% endif %}
-                            <div class="col-sm-4"><strong>Has irrigation operation?</strong></div>
-                            {% if swat_model_parameters.has_irrigation_operation %}
-                                <div class="col-sm-8">Yes</div>
-                            {% else %}
-                                <div class="col-sm-8">No</div>
-                            {% endif %}
+                            <div class="col-sm-4"><strong>Model parameters:</strong></div>
+                            <div class="col-sm-8">{{ swat_model_parameters.model_parameters }}</div>
                             {% if swat_model_parameters.other_parameters %}
                                 <div class="col-sm-4"><strong>Other parameters:</strong></div>
                                 <div class="col-sm-8">{{ swat_model_parameters.other_parameters }}</div>
