--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -1416,6 +1416,9 @@
             </div>
             </div>
         <!-- ==== Tabs end ==== -->
+        <div class="rating">
+            {% rating_for cm %}
+        </div>
         {% comments_for cm %}
         {#                #}
         {# dialogs follow #}
