fixed the issue [#490] to correct the error message typo

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -2283,7 +2283,7 @@
             $alert_error = '<div class="alert alert-danger" id="error-alert"> \
                 <button type="button" class="close" data-dismiss="alert">x</button> \
                 <strong>Error! </strong> \
-                Metadata updated failed.\
+                Metadata failed to update.\
             </div>'
             $form=$('#' + form_id);
             var datastring = $form.serialize();
