--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -415,7 +415,7 @@
                         <div class="panel-body">
                             <div class="col-md-4">
                                 <div class="custom-well">
-                                    <h5 class="access-panel-title"><strong>Users with full read/write permissions on this resource</strong></h5>
+                                    <h5 class="access-panel-title"><strong>Owners with full permissions to do anything on this resource</strong></h5>
 
                                     <form action="/hsapi/_internal/{{ cm.short_id }}/change-permissions/"
                                           method="POST">
