--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1205,10 +1205,6 @@ body > .container{
     /*Substract the height of the footer*/
     min-height: calc(100% - 277px);
     padding-top: 20px;
-    /*background: #FFF;*/
-    /*margin-top: 20px;*/
-    /*border-radius: 5px;*/
-    /*box-shadow: 0px 0px 5px #B5B5B5;*/
 }
 
 .icon-button {
@@ -1283,8 +1279,8 @@ body > .container{
 }
 
 #permission-panel .custom-well{
-    height: 265px;
     background: #F7F7F7;
+    margin-top: 30px;
 }
 
 .info-icon{
@@ -1787,4 +1783,67 @@ ul.resource-search-options {
 .resource-search-options li.selected {
 	background-color: #aab;
 	color: white;
+}
+
+/* New access panel style */
+div.user-scope .user-username-content {
+    color: rgba(0,0,0,0.54);
+}
+
+td.user-roles, td.user-actions {
+    padding-top: 16px !important;
+    color: #428bca;
+}
+
+td.user-roles .dropdown{
+    cursor: pointer;
+    padding:4px;
+}
+
+td.user-roles .dropdown:hover {
+    border: 1px solid #CCC;
+    margin: -1px;
+}
+
+td.user-roles .caret {
+    border-top: 4px solid #428bca;
+}
+
+td.user-actions > span {
+    cursor: pointer;
+    color: #999;
+}
+
+td.user-actions > span:hover {
+    cursor: pointer;
+    color: #777;
+}
+
+
+#access-table tr:last-child {
+    border-bottom: 1px solid #ddd;
+}
+
+#manage-access .custom-well > .input-group {
+    width: 100%;
+}
+
+#manage-access .custom-well > .input-group > input {
+    width: 70%;
+}
+
+#manage-access .custom-well > .input-group > .dropdown {
+    width: 30%;
+    display:inline;
+    border-radius:0;
+}
+
+#manage-access .custom-well > .input-group > .dropdown > button{
+    border-radius: 0;
+}
+
+div.access-table-container {
+    height: 200px;
+    padding-bottom: 100px;
+    overflow-y: auto;
 }
