--- a/ref_ts/templates/pages/create-ref-time-series.html
+++ b/ref_ts/templates/pages/create-ref-time-series.html
@@ -232,6 +232,9 @@
                         site_code = site.substr(n+2);
                 var url = globurl;
 
+                var b = $('#submit');
+                b.addClass('disabled');
+
                 $.ajax({
                     type:"GET",
                     url:'/hsapi/_internal/search-variables/',
@@ -280,18 +283,60 @@
                     n = full_variable.indexOf(':');
                     variable = full_variable.substr(n+2);
                 }
-{#                Look at method 1: http://stackoverflow.com/questions/10802312/display-png-image-as-response-to-jquery-ajax-request#}
-                var img_url='/hsapi/_internal/time-series-from-service/?ref_type='+ref_type+'&site='+site+'&variable='+variable+'&service_url='+service_url
-                $('#preview-div').html('<img src="'+img_url+'" id="preview-graph" class="col-sm-offset-2"/>')
-                $('#preview-div').show();
 
-                var b = $('#submit');
-                b.removeClass('disabled');
-                $('#loading-1').hide();
-                $('#url').append($("<option></option>")
-                        .attr("value",service_url)
-                        .text(service_url));
-                $('#url').val(service_url);
+
+
+                $.ajax({
+                    type:"GET",
+                    url:'/hsapi/_internal/time-series-from-service/',
+                    data: {ref_type: ref_type,
+                        service_url: service_url,
+                        site: site,
+                        variable: variable},
+                    success: function(data, xhr, status){
+                        var preview_url = data['preview_url'];
+                        $('#preview-div').html('<img src="'+ preview_url +'" id="preview-graph" class="col-sm-offset-2"/>');
+                        $('#preview-div').show();
+                        var b = $('#submit');
+                        b.removeClass('disabled');
+                        $('#loading-1').hide();
+                        $('#url').append($("<option></option>")
+                                .attr("value",service_url)
+                                .text(service_url));
+                        $('#url').val(service_url);
+                    },
+                    error: function(data, stuff){
+                        $('#url-input').removeClass("has-success");
+                        $('#fail-notice').show();
+                        console.log(data);
+                        console.log(stuff);
+                        $('#preview-div').hide();
+                        $('#loading-1').hide();
+                    }
+                })
+
+
+
+
+
+
+
+
+
+{#                #}
+{#                #}
+{#                Look at method 1: http://stackoverflow.com/questions/10802312/display-png-image-as-response-to-jquery-ajax-request#}
+{#                var img_url='/hsapi/_internal/time-series-from-service/?ref_type='+ref_type+'&site='+site+'&variable='+variable+'&service_url='+service_url#}
+{#                $('#preview-div').html('<img src="'+img_url+'" id="preview-graph" class="col-sm-offset-2"/>')#}
+{#                $('#preview-div').show();#}
+{##}
+{#                var b = $('#submit');#}
+{#                b.removeClass('disabled');#}
+{#                $('#loading-1').hide();#}
+{#                $('#url').append($("<option></option>")#}
+{#                        .attr("value",service_url)#}
+{#                        .text(service_url));#}
+{#                $('#url').val(service_url);#}
             }
 
             $('#variable').change(function(){
